--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,44 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  /* border: 1px solid black; */
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  height: 100vh;
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: bisque
+}
+
+#quote-box {
+  width: 640px;
+  height: 320px;
+  display: grid;
+  grid-template: 3fr 1fr / 1fr 1fr 2fr;
+  background-color: white;
+  border-radius: 20px;
+}
+
+#text {
+  grid-column: 1 / 4;
+  align-self: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.5rem;
+  padding: 30px
+}
+
+button {
+  align-self: center;
+  justify-self: center;
+  padding: 10px;
+  border-radius: 5px;
+  border: 0;
+  background-color: cornflowerblue;
+  color: white;
+}
+
+#author {
+  align-self: flex-start;
+  justify-self: center;
 }
